          value into $self->{auto_sleep} from the config file
        - fix issue where we getting segfaults when bbdispatch was in auto mode
          with --rpi enabled. We were creating a new LCD on each run, and were
          eventually hitting wiringPi's MAX_LCD (8) limit. Moved the LCD init
          to run once on object instantiation (fixes #209; fixes 
          stevieb9/rpi-lcd#6)

2.17    2017-04-27
        - troubleshooting issue where this current commit is causing the LCD
          to shift off a couple chars per run. This needs to be looked at
        - workaround for above off-by-one LCD issue (stevieb9/rpi-lcd#5). The
          global LCD object is now created on each return of a Tester. This
          isn't ideal but we'll fix that next
        - Git should log out checksums (closes #198)
        - each module logs out a characteristic header when an object is
          initialized
        - cleaned up the log entry for the plugin args in BrewBuild
        - added "waiting for tester" log entry line (closes #200)
        - re-ordered log entries at the point the tester goes into listen state
          (closes #197)
        - wrap code lines > 80 cols
        - reduced the number of calls to Git::name() in Tester::listen().
          Instead of making numerous repeated calls, we now just stash a single
          call into a variable (closes #196)
        - Tester now logs out its arguments when in debug 7 mode (closes #195)
        - POD cleanup (closes #170)
        - added RPi integration examples to the FAQ
        - slight changes to test_log tests to conform to the changes made within
          this version
        - Git::git() now keeps a copy of the actual command and returns it
          after the first full run. This removes unneeded duplicate log
          entries(closes #203)
        - several log entry modifications/cleanup
        - in Dispatch::auto(), only attempt to fetch the commit csums if there